name:                progsdat
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ftrvxmtrx/progsdat#readme
license:             BSD3
license-file:        LICENSE
author:              Sigrid Haflínudóttir
maintainer:          ftrvxmtrx@gmail.com
copyright:           MIT
-- category:
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable progsdat
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Parse
                       Types
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , binary
